--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -254,6 +254,9 @@ initializr:
     - name: Jar
       id: jar
       default: true
+    - name: Pom
+      id: pom
+      defalut: false
     - name: War
       id: war
       default: false
