--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -213,6 +213,29 @@ initializr:
             - rel: guide
               href: https://github.com/Microsoft/azure-spring-boot/tree/master/azure-spring-boot-samples/azure-servicebus-spring-boot-sample
               description: Sample project for Azure Spring Service Bus
+  services:
+    - name: Infrastructure Spring Cloud Modules
+      content:
+        - name: Spring Cloud Config Server
+          id: cloud-config-server
+          description: Central management for configuration via a git or svn backend
+        - name: Spring Cloud Gateway
+          id: cloud-gateway
+          description: Intelligent and programmable routing with the reactive Spring Cloud Gateway
+        - name: Spring Cloud Eureka Server
+          id: cloud-eureka-server
+          description: Spring Cloud Service Registry and Discovery
+        - name: Spring Cloud Hystrix Dashboard
+          id: cloud-hystrix-dashboard
+          description: Circuit breaker dashboard with spring-cloud-netflix Hystrix
+        - name: Spring Cloud Ribbon
+          id: cloud-ribbon
+          description: Client side load balancing with spring-cloud-netflix and Ribbon
+    - name: Azure Spring Cloud Modules
+      content:
+        - name: Azure Service Bus
+          id: azure-service-bus
+          description: Azure Service Bus
   types:
     - name: Maven Project
       id: maven-project
