Fix mvn clean package build error.
Signed-off-by: Pan Li <panli@microsoft.com>

--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -1371,6 +1371,9 @@ initializr:
     - name: Jar
       id: jar
       default: true
+    - name: Pom
+      id: pom
+      default: false
     - name: War
       id: war
       default: false
