Migrate the CMD from docker-compose to dockerfile
* Add heartbeat to docker_run.sh

Signed-off-by: Pan Li <panli@microsoft.com>

--- a/initializr-generator/src/main/resources/templates/docker/Dockerfile
+++ b/initializr-generator/src/main/resources/templates/docker/Dockerfile
@@ -3,6 +3,10 @@ MAINTAINER yaweiw@microsoft.com
 RUN apk add --update bash && rm -rf /var/cache/apk/*
 
 ADD ./packages/ /packages/
-ADD docker_run.sh /packages/
+
+RUN chmod +x /packages/docker_run.sh
+RUN dos2unix /packages/docker_run.sh
+
+CMD /bin/bash "/packages/docker_run.sh"
 
 EXPOSE 8888 8761
