--- a/initializr-generator/src/main/resources/templates/properties/bootstrap-non-config-server.yml
+++ b/initializr-generator/src/main/resources/templates/properties/bootstrap-non-config-server.yml
@@ -3,5 +3,5 @@ spring:
     name: {{applicationName}}
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config-server:8888
       fail-fast: true
