--- a/initializr-generator/src/main/resources/templates/properties/shared/application.yml
+++ b/initializr-generator/src/main/resources/templates/properties/shared/application.yml
@@ -1,8 +1,8 @@
 eureka:
   instance:
     prefer-ip-address: true
-    lease-expiration-duration-in-seconds: 2
-    lease-renewal-interval-in-seconds: 1
+    lease-expiration-duration-in-seconds: 20
+    lease-renewal-interval-in-seconds: 20
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
