--- a/initializr-generator/src/main/resources/templates/docker/docker-compose.yml
+++ b/initializr-generator/src/main/resources/templates/docker/docker-compose.yml
@@ -59,6 +59,8 @@ services:
     links:
       - eureka-server
       - config-server
+    ports:
+      - "9999:9999"
     depends_on:
       service-bus-server:
         condition: service_healthy
