--- a/initializr-service/pom.xml
+++ b/initializr-service/pom.xml
@@ -116,7 +116,7 @@
 				</executions>
 			</plugin>
 
-			<!--Build Docker Image-->
+			<!-- Build Docker Image -->
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
@@ -130,7 +130,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>${your-docker-image-prefix}/${your-docker-image-name}</repository>
+					<repository>${your-acr-username}.azurecr.io/azure-spring-cloud</repository>
 					<buildArgs>
 						<JAR_FILE>initializr-service.jar</JAR_FILE>
 					</buildArgs>
@@ -143,16 +143,15 @@
 				<version>1.1.0</version>
 				<configuration>
 					<authentication>
-						<serverId>azure-auth</serverId>
+						<serverId>${your-azure-server-id}</serverId>
 					</authentication>
-					<resourceGroup>wingtiptoysresources</resourceGroup>
-					<appName>azure-spring-cloud</appName>
+					<resourceGroup>${your-resource-group}</resourceGroup>
+					<appName>${your-application-name}</appName>
 					<region>japaneast</region>
-
 					<containerSettings>
-						<imageName>${your-docker-image-prefix}/${your-docker-image-name}:${docker-label}</imageName>
-						<registryUrl>https://plincar.azurecr.io</registryUrl>
-						<serverId>azure-auth</serverId>
+						<imageName>${your-acr-username}.azurecr.io/azure-spring-cloud:latest</imageName>
+						<serverId>${your-acr-server-id}</serverId>
+						<registryUrl>https://${your-acr-username}.azurecr.io</registryUrl>
 					</containerSettings>
 					<appSettings>
 						<property>
@@ -162,8 +161,6 @@
 					</appSettings>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
-
 </project>
