--- a/initializr-service/pom.xml
+++ b/initializr-service/pom.xml
@@ -89,7 +89,7 @@
 				</executions>
 				<configuration>
 					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
-					<dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
+					<dateFormat>yyyy-MM-dd^HH:mm:ssZ</dateFormat>
 					<generateGitPropertiesFile>true</generateGitPropertiesFile>
 					<generateGitPropertiesFilename>
 						${project.build.outputDirectory}/git.properties
