--- a/initializr-generator/src/main/resources/templates/kubernetes/kubernetes.yaml
+++ b/initializr-generator/src/main/resources/templates/kubernetes/kubernetes.yaml
@@ -2,34 +2,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{name}}
+  name: {{k8sName}}
   labels:
-    run: {{name}}
+    run: {{k8sName}}
 spec:
   ports:
   - port: {{port}}
     protocol: TCP
   selector:
-    run: {{name}}
+    run: {{k8sName}}
+  type: LoadBalancer
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{name}}
+  name: {{k8sName}}
 spec:
   selector:
     matchLabels:
-      run: {{name}}
+      run: {{k8sName}}
   replicas: 1
   template:
     metadata:
       labels:
-        run: {{name}}
+        run: {{k8sName}}
     spec:
       containers:
-      - name: {{name}}
+      - name: {{k8sName}}
         image: "{{image}}"
         ports:
         - containerPort: {{port}}
@@ -37,7 +38,7 @@ spec:
           httpGet:
             path: {{healthCheckPath}}
             port: {{port}}
-          initialDelaySeconds: 5
+          initialDelaySeconds: 20
           periodSeconds: 5
 
 ---
